--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
 # === MySQL Database Configuration ===
 DB_HOST=localhost
-DB_USER=your_mysql_user
-DB_PASSWORD=your_mysql_password
-DB_NAME=bigcommerce_db
+DB_USER=bigcommercedb
+DB_PASSWORD=Xman@100%
+DB_NAME=bigcommercedb
 
 # === JWT Secret for Auth ===
 JWT_SECRET=your_jwt_secret_key
 
 # === App Port ===
-PORT=3000
+PORT=5000
 
 # === Frontend URL (optional for CORS) ===
 FRONTEND_URL=https://bigcommerce.it.com
