--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # === MySQL Database Configuration ===
-DB_HOST=localhost
+DB_HOST=server.bigcommerce.it.com
 DB_USER=bigcommercedb
 DB_PASSWORD=Xman@100%
 DB_NAME=bigcommercedb
